<resources>
    <string name="app_name">English Learning App</string>
    <string name="pronunciation_guides">Pronunciation Guides</string>
    <string name="practice_words">Practice Words to Speak</string>
    <string name="about_us">About Us</string>
    <string name="exit_app">Exit</string>
    <string name="Lesson1_English_Pronunciation">Lesson 1: English Word Pronunciation</string>
    <string name="Lesson2_Word_Stress">Lesson 2: Word Stress and Syllables</string>
    <string name="Lesson3_Long_E_sounds">Lesson 3: Long E sound (meet, see)</string>
    <string name="Lesson4_Short_I_sounds">Lesson 4: Short I sound (sit, hit)</string>
    <string name="Lesson5_UH_sounds">Lesson 5: UH sound (put, foot)</string>
    <string name="Lesson6_OO_sounds">Lesson 6: OO sound (moon, blue)</string>
    <string name="about_us_content">Welcome to our English Learning App, developed by Team 7 from 2-BSIT-1 at New Era University. We are a group of dedicated and passionate students who came together to create a unique language learning experience.\n\n<b>Our Team:</b>\n\n<b>Carl Russel Orlina</b>: carl.orlina@neu.edu.ph\n<b>Johnle Patalagsa</b>: johnle.patalagsa@neu.edu.ph\n<b>Prince Joshfer Canales</b>: prince.canales@neu.edu.ph\n\nAs second-year college students, we embarked on this project with a shared goal: to provide an accessible and engaging platform for individuals who wish to enhance their English language skills. Despite the limited time frame, we poured our efforts into developing this app to help learners of all levels improve their English proficiency.\n\nAlthough our app may not be as polished as some others you may come across, we believe that the value lies in its simplicity and ease of use. We understand that learning a new language can be challenging, which is why we focused on creating a user-friendly interface that caters to various learning styles.\n\nWhile our app may not have an extensive amount of content yet, we are committed to expanding its offerings in the future. We greatly appreciate your understanding and patience as we continue to work diligently to bring you additional lessons, exercises, and interactive features.\n\nWe value your feedback and suggestions as we strive to make our English Learning App even better. We are dedicated to continuously improving the app based on your needs and preferences. Your journey towards English language mastery is important to us, and we are here to support you every step of the way.\n\nThank you for choosing our app as your language learning companion. Start exploring, practicing, and building your English skills today!</string>

</resources>